修复图片显示的bug

--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -110,7 +110,7 @@ html{
 
 
 .details .content img{
-    max-width:868px !important;
+    max-width:100% !important;
 }
 .details .content h2{
     font-size:16px;
