--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -19,7 +19,13 @@
 
 @font-face {
     font-family: xi;
-    src: url('../font/FZZKFW.ttf') format('truetype');
+    src: url("../font/xi.eot"); /* IE9 */
+    src: local("font"), url("../font/xi.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("../font/xi.woff") format("woff"), /* chrome, firefox */
+    url("../font/xi.ttf") format("truetype"), /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+    url("../font/xi.svg#font") format("svg"); /* iOS 4.1- */
+    font-style: normal;
+    font-weight: normal;
 }
 
 @font-face {
@@ -60,7 +66,7 @@ html{
 
 .ellipsis-1{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 .ellipsis-2{display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;}
-.ellipsis-21{display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1;overflow: hidden;}
+.ellipsis-1s{display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1;overflow: hidden;}
 .ellipsis-3{display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;overflow: hidden;}
 
 .container{
@@ -128,25 +134,12 @@ html{
 .details .content img{
     max-width:100% !important;
 }
-.details .content h2{
-    font-size:16px;
-    font-weight:700;
-    margin-top:30px !important;
-    margin-bottom:15px !important;
-    padding-left:10px;
-    border-left:5px solid rgb(106,230,120);
-    border-bottom:1px solid rgb(106,230,120);
-    height:32px;
-    line-height:32px;
-    border-radius:1px;
-    color:rgb(120,120,120);
-    background:rgb(251,251,251);
-}
+
 .details .content a[target=nuxt]{
     color:#fff;
     cursor:pointer;
     padding:1px 2px;
-    background:rgba(106,230,120);
+    color:var(--colorActive);
 }
 
 .details .content p{
@@ -159,26 +152,12 @@ html{
 .details .content p.text{
     text-indent:32px;
 }
-.details .content p.border-img{
-    /*padding-right:1px;*/
-    /*border:1px solid #06aaff;*/
-}
+
 .details .content code:not([class*=language]){
     padding:2px 5px;
     background:#f7f7f9;
     border:1px solid #e3edf3;
     border-radius:3px;
     color:#d14;
-}
-.details .content .code-toolbar{
-    border-radius:4px;
-    overflow: hidden;
-}
-.details .content .code-toolbar > .line-numbers{
-    border:1px solid rgba(7,17,27,0.1);
-}
-.details .content .code-toolbar > .line-numbers code[class*=language]{
-    border-left:none;
-    box-shadow: none;
 }
 
